test/webgl/error/unterminated_cond2.true
File 0, line 3, col 0 - 5:
unterminated conditional "#elif"

Fatal: unrecoverable preprocessor parse error (3)
